<resources>
    <string name="app_name">app</string>
    <string name="OK">OK</string>
    <string name="menu_refresh">Refresh</string>
    <string name="welcome_text_1">Welcome to MemoWord!</string>
    <string name="welcome_text_2">Please enter your credentials.</string>
    <string name="editext_hint_username">Username</string>
    <string name="editext_hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_log_out">Log Out</string>
    <string name="btn_exit">Exit</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up_now">Signup now!</string>
    <string name="registration_label">Registration</string>
    <string name="btn_signup">Sign Up</string>
    <string name="ic_delete_selected">Delete Selected</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word">Word</string>
    <string name="translate">Translate</string>
    <string name="add_word">Add word</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
</resources>